--- a/newdot.service
+++ b/newdot.service
@@ -4,7 +4,7 @@ After=multi-user.target
 
 [Service]
 Type=idle
-ExecStart=/usr/bin/python3 /home/myshake/NewDot/serialClient_final.py /dev/ttyS0 > /home/myshake/NewDot/log.txt 2>&1
+ExecStart=/usr/bin/python3 /home/pi/NewDot/serialClient_final.py /dev/ttyS0 > /home/pi/NewDot/log.txt 2>&1
 
 [Install]
 WantedBy=multi-user.target
